fixes to touchzooms on mobile; v 0.1.3

--- a/example/css/main.css
+++ b/example/css/main.css
@@ -14,6 +14,7 @@ body, html, #mapid {
     left:0;
     color:white;
     pointer-events: none;
+    z-index: 999;
 }
 #draw {
     background:#222;
